# os-homeworks

./: README.md
lab1/doc/: lab1.md
lab1/src/: b.c  error.c  f.c  file.txt  main.c  makefile
lab10/: CMakeLists.txt  main.c  report.md
lab11/: report.md
lab12/: report.md
lab13/: CMakeLists.txt
lab13/doc/: report.md
lab13/src/: utils.c
lab2/: CMakeLists.txt
lab2/doc/: report.md
lab2/src/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
lab3/: CMakeLists.txt
lab3/doc/: report.md
lab3/src/: memory-user.c
lab4/doc/: report.md
lab4/src/: aspace.c  data.c  malloc.c  name.c  null.c  task8.c
lab5/doc/: report.md
lab5/src/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
lab6/: check-fletcher.c  check-xor.c  crc.c  report.md  task5.c
lab6/doc/: report.md
lab6/src/: check-fletcher.c  check-xor.c  crc.c  create-csum.c
lab7/: CMakeLists.txt
lab7/doc/: report.md
lab7/src/: main.c
lab7/test/: test.sh  test.txt
lab9/: report.md
